// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourtsContainer should match snapshot upon initial render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CourtsContainer
    closeCourts={Array []}
    favorites={
        Array [
            Object {
              "name": "bobby",
            },
            Object {
              "name": "jane",
            },
            Object {
              "name": "jorge",
            },
          ]
    }
    handleSubmitCourts={[Function]}
    location={
        Object {
            "pathname": "/",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "courts-container",
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "courts-container",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CourtsContainer should match snapshot upon receiving closeCourts props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CourtsContainer
    closeCourts={
        Array [
            Object {},
            Object {},
          ]
    }
    location={
        Object {
            "pathname": "/",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          account={undefined}
          addFavoriteCourt={[Function]}
          court={Object {}}
          db={
                    Object {
                              "addFavoriteCourt": [Function],
                              "checkForFavorites": [Function],
                              "doCreateUser": [Function],
                              "grabFavoriteCourtsList": [Function],
                              "onceGetUsers": [Function],
                              "removeFavoriteFromList": [Function],
                            }
          }
          favorites={undefined}
          handleFavorite={undefined}
          id={0}
          isFavorite={[Function]}
          location={undefined}
          name={undefined}
          removeFromFavorites={[Function]}
/>,
        <Unknown
          account={undefined}
          addFavoriteCourt={[Function]}
          court={Object {}}
          db={
                    Object {
                              "addFavoriteCourt": [Function],
                              "checkForFavorites": [Function],
                              "doCreateUser": [Function],
                              "grabFavoriteCourtsList": [Function],
                              "onceGetUsers": [Function],
                              "removeFavoriteFromList": [Function],
                            }
          }
          favorites={undefined}
          handleFavorite={undefined}
          id={1}
          isFavorite={[Function]}
          location={undefined}
          name={undefined}
          removeFromFavorites={[Function]}
/>,
      ],
      "className": "courts-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "account": undefined,
          "addFavoriteCourt": [Function],
          "court": Object {},
          "db": Object {
            "addFavoriteCourt": [Function],
            "checkForFavorites": [Function],
            "doCreateUser": [Function],
            "grabFavoriteCourtsList": [Function],
            "onceGetUsers": [Function],
            "removeFavoriteFromList": [Function],
          },
          "favorites": undefined,
          "handleFavorite": undefined,
          "id": 0,
          "isFavorite": [Function],
          "location": undefined,
          "name": undefined,
          "removeFromFavorites": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "account": undefined,
          "addFavoriteCourt": [Function],
          "court": Object {},
          "db": Object {
            "addFavoriteCourt": [Function],
            "checkForFavorites": [Function],
            "doCreateUser": [Function],
            "grabFavoriteCourtsList": [Function],
            "onceGetUsers": [Function],
            "removeFavoriteFromList": [Function],
          },
          "favorites": undefined,
          "handleFavorite": undefined,
          "id": 1,
          "isFavorite": [Function],
          "location": undefined,
          "name": undefined,
          "removeFromFavorites": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            account={undefined}
            addFavoriteCourt={[Function]}
            court={Object {}}
            db={
                        Object {
                                    "addFavoriteCourt": [Function],
                                    "checkForFavorites": [Function],
                                    "doCreateUser": [Function],
                                    "grabFavoriteCourtsList": [Function],
                                    "onceGetUsers": [Function],
                                    "removeFavoriteFromList": [Function],
                                  }
            }
            favorites={undefined}
            handleFavorite={undefined}
            id={0}
            isFavorite={[Function]}
            location={undefined}
            name={undefined}
            removeFromFavorites={[Function]}
/>,
          <Unknown
            account={undefined}
            addFavoriteCourt={[Function]}
            court={Object {}}
            db={
                        Object {
                                    "addFavoriteCourt": [Function],
                                    "checkForFavorites": [Function],
                                    "doCreateUser": [Function],
                                    "grabFavoriteCourtsList": [Function],
                                    "onceGetUsers": [Function],
                                    "removeFavoriteFromList": [Function],
                                  }
            }
            favorites={undefined}
            handleFavorite={undefined}
            id={1}
            isFavorite={[Function]}
            location={undefined}
            name={undefined}
            removeFromFavorites={[Function]}
/>,
        ],
        "className": "courts-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "account": undefined,
            "addFavoriteCourt": [Function],
            "court": Object {},
            "db": Object {
              "addFavoriteCourt": [Function],
              "checkForFavorites": [Function],
              "doCreateUser": [Function],
              "grabFavoriteCourtsList": [Function],
              "onceGetUsers": [Function],
              "removeFavoriteFromList": [Function],
            },
            "favorites": undefined,
            "handleFavorite": undefined,
            "id": 0,
            "isFavorite": [Function],
            "location": undefined,
            "name": undefined,
            "removeFromFavorites": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "account": undefined,
            "addFavoriteCourt": [Function],
            "court": Object {},
            "db": Object {
              "addFavoriteCourt": [Function],
              "checkForFavorites": [Function],
              "doCreateUser": [Function],
              "grabFavoriteCourtsList": [Function],
              "onceGetUsers": [Function],
              "removeFavoriteFromList": [Function],
            },
            "favorites": undefined,
            "handleFavorite": undefined,
            "id": 1,
            "isFavorite": [Function],
            "location": undefined,
            "name": undefined,
            "removeFromFavorites": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
